--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "mysql": "^2.5.4",
     "prepare-response": "^1.1.2",
     "templatizer": "^1.1.1",
-    "uglify-js": "^2.4.16"
+    "uglify-js": "^2.4.16",
+    "underscore": "^1.8.2"
   }
 }
